--- a/pei_slingers/.project
+++ b/pei_slingers/.project
@@ -42,6 +42,11 @@
 			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/arduino/hardware/avr/1.8.6/variants/standard</locationURI>
 		</link>
 		<link>
+			<name>libraries/EEPROM</name>
+			<type>2</type>
+			<locationURI>ECLIPSE_HOME/arduinoPlugin/packages/arduino/hardware/avr/1.8.6/libraries/EEPROM</locationURI>
+		</link>
+		<link>
 			<name>libraries/FastRunningMedian</name>
 			<type>2</type>
 			<location>C:/Users/jan/git/ArduinoLibraries/FastRunningMedian</location>
